--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-DATABASE_HOST = localhost
-DATABASE_USER = root
-DATABASE_PASSWORD = 
-DATABASE = restaurent
+DATABASE_HOST = 'db4free.net'
+DATABASE_USER = 'deepak'
+DATABASE_PASSWORD = 'Deepak@123'
+DATABASE = 'restaurent'
 SECRET_KEY = 'secret'
 JWT_COOKIE_EXPIRE = 10
+DUMMY_EMAIL_SENDER = 'deepakpawar618@gmail.com'
+DUMMY_PASSWORD = 'ptmvbrfoxikldpqy'
